--- a/Filmek/Filmek/MainWindow.xaml
+++ b/Filmek/Filmek/MainWindow.xaml
@@ -7,6 +7,31 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <TabControl>
+            <TabItem Header="hozzáadás">
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0*"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="Cím:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="60"/>
+                    <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="Műfaj:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top" Width="65"/>
+                    <DatePicker Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="82,59,0,0" VerticalAlignment="Top" Width="89"/>
+                    <Label Content="Megjelenés:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,59,0,0" VerticalAlignment="Top" Width="83"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Módosítás/szűrés">
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0*"/>
+                        <ColumnDefinition Width="0*"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                </Grid>
+            </TabItem>
+        </TabControl>
 
     </Grid>
 </Window>
