--- a/Filmek/Filmek/MainWindow.xaml
+++ b/Filmek/Filmek/MainWindow.xaml
@@ -9,21 +9,21 @@
     <Grid>
         <TabControl>
             <TabItem Header="hozzáadás">
-                <Grid Background="#FFE5E5E5">
+                <Grid Background="#CADCFC">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0*"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <TextBox  Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
                     <Label Content="Cím:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="60"/>
-                    <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label Content="Műfaj:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top" Width="65"/>
-                    <DatePicker Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="84,86,0,0" VerticalAlignment="Top" Width="110"/>
+                    <TextBox Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label  Content="Műfaj:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top" Width="65"/>
+                    <DatePicker Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="84,86,0,0" VerticalAlignment="Top" Width="110"/>
                     <Label Content="Megjelenés:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,86,0,0" VerticalAlignment="Top" Width="83"/>
-                    <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <TextBox Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
                     <Label Content="Hossz:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,57,0,0" VerticalAlignment="Top" Width="65"/>
                     <Label Content="Szereplők:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="11,112,0,0" VerticalAlignment="Top" Width="64"/>
-                    <RichTextBox Grid.ColumnSpan="2" Margin="75,115,523,128">
+                    <RichTextBox Background="#00246B" Grid.ColumnSpan="2" Margin="75,115,523,128">
                         <FlowDocument>
                             <Paragraph>
                                 <Run Text=""/>
@@ -31,7 +31,7 @@
                         </FlowDocument>
                     </RichTextBox>
                     <Label Content="Díjak:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="29,297,0,0" VerticalAlignment="Top" Width="64"/>
-                    <RichTextBox Grid.ColumnSpan="2" Margin="75,297,523,10">
+                    <RichTextBox Background="#00246B" Grid.ColumnSpan="2" Margin="75,297,523,10">
                         <FlowDocument>
                             <Paragraph>
                                 <Run Text=""/>
@@ -39,47 +39,16 @@
                         </FlowDocument>
                     </RichTextBox>
                     <Label Content="Rendező:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="288,3,0,0" VerticalAlignment="Top"/>
-                    <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Grid Background="#A2AED7" Grid.ColumnSpan="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="0*"/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <TextBox Background="#A2C9D7" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                        <Label Content="Cím:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="60"/>
-                        <TextBox Background="#A2C9D7" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                        <Label Content="Műfaj:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top" Width="65"/>
-                        <DatePicker Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="84,86,0,0" VerticalAlignment="Top" Width="110"/>
-                        <Label Content="Megjelenés:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,86,0,0" VerticalAlignment="Top" Width="83"/>
-                        <TextBox Background="#A2C9D7" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                        <Label Content="Hossz:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,57,0,0" VerticalAlignment="Top" Width="65"/>
-                        <Label Content="Szereplők:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="11,112,0,0" VerticalAlignment="Top" Width="64"/>
-                        <RichTextBox Grid.ColumnSpan="2" Margin="75,115,523,128" Background="#A2C9D7">
-                            <FlowDocument>
-                                <Paragraph>
-                                    <Run Text=""/>
-                                </Paragraph>
-                            </FlowDocument>
-                        </RichTextBox>
-                        <Label Content="Díjak:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="29,297,0,0" VerticalAlignment="Top" Width="64"/>
-                        <RichTextBox Grid.ColumnSpan="2" Margin="75,297,523,10">
-                            <FlowDocument>
-                                <Paragraph>
-                                    <Run Text=""/>
-                                </Paragraph>
-                            </FlowDocument>
-                        </RichTextBox>
-                        <Label Content="Rendező:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="288,3,0,0" VerticalAlignment="Top"/>
-                        <TextBox Background="#A2C9D7" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                        <Label Content="Író:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="290,29,0,0" VerticalAlignment="Top"/>
-                        <TextBox Background="#A2C9D7" HorizontalAlignment="Center" Margin="0,33,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="149" Grid.Column="1"/>
-                        <Label Content="Zene:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="290,57,0,0" VerticalAlignment="Top"/>
-                        <TextBox HorizontalAlignment="Left" Margin="334,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="138" Grid.Column="1"/>
-                        <Label Content="Gyártó:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="290,85,0,0" VerticalAlignment="Top"/>
-                        <TextBox HorizontalAlignment="Left" Margin="343,89,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129" Grid.Column="1"/>
-                        <Label Content="Korhatár:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="290,112,0,0" VerticalAlignment="Top"/>
-                        <TextBox HorizontalAlignment="Left" Margin="353,116,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129" Grid.Column="1"/>
-                    </Grid>
+                    <TextBox Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="Forgatókönyv író:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="248,33,0,0" VerticalAlignment="Top"/>
+                    <TextBox Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="Zene:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="308,66,0,0" VerticalAlignment="Top"/>
+                    <TextBox Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,70,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="Korhatár:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="294,130,0,0" VerticalAlignment="Top"/>
+                    <TextBox Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="352,134,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="Gyártó:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="299,99,0,0" VerticalAlignment="Top"/>
+                    <TextBox Background="#00246B" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,103,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Button Background="#00246B" Content="Beküldés" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,231,0,0" VerticalAlignment="Top" Height="85" Width="247"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Módosítás/szűrés">
@@ -89,6 +58,18 @@
                         <ColumnDefinition Width="0*"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
+                    <StackPanel Grid.ColumnSpan="3" Margin="378,0,0,0">
+                        <DataGrid Height="407" d:ItemsSource="{d:SampleData ItemCount=5}" SelectedIndex="2"/>
+                    </StackPanel>
+                    <TextBlock Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Módosítandó/törlendő adat:" VerticalAlignment="Top" Width="183"/>
+                    <Label Content="Sor:" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="69,31,0,0" VerticalAlignment="Top"/>
+                    <TextBox Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="104,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="Oszlop:" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="50,54,0,0" VerticalAlignment="Top"/>
+                    <TextBox Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="104,58,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Button Content="Módosítás" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="24,142,0,0" VerticalAlignment="Top" Height="33" Width="121"/>
+                    <Button Content="Törlés" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="224,142,0,0" VerticalAlignment="Top" Height="33" Width="121"/>
+                    <Label Content="Módosítot:" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="24,96,0,0" VerticalAlignment="Top"/>
+                    <TextBox Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="97,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
                 </Grid>
             </TabItem>
         </TabControl>
