--- a/Filmek/Filmek/MainWindow.xaml
+++ b/Filmek/Filmek/MainWindow.xaml
@@ -1,67 +1,183 @@
 ﻿<Window x:Class="Filmek.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Filmek"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Filmek adatbázis"
+        Height="550"
+        Width="900"
+        Background="#F1F4FF">
+
+    <Window.Resources>
+
+        <Style x:Key="CardStyle" TargetType="Border">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="CornerRadius" Value="12"/>
+            <Setter Property="Margin" Value="15"/>
+            <Setter Property="Padding" Value="20"/>
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect Color="#00000040"
+                                      BlurRadius="10"
+                                      ShadowDepth="2"/>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="Button" x:Key="PrimaryButton">
+            <Setter Property="Background" Value="#4A6CF7"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Padding" Value="10"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Height" Value="38"/>
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
+
+    </Window.Resources>
+
     <Grid>
         <TabControl>
-            <TabItem Header="hozzáadás">
-                <Grid  Background="#CADCFC">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0*"/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <TextBox x:Name="Cim"  Background="#00246B" Foreground="White" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label Content="Cím:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="60"/>
-                    <TextBox x:Name="Mufaj" Background="#00246B" Foreground="White"  Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label  Content="Műfaj:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top" Width="65"/>
-                    <DatePicker x:Name="Datum" Background="#00246B"  Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="84,86,0,0" VerticalAlignment="Top" Width="110"/>
-                    <Label Content="Megjelenés:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,86,0,0" VerticalAlignment="Top" Width="83"/>
-                    <TextBox x:Name="Hossz" Background="#00246B" Foreground="White"  Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="51,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label Content="Hossz:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,57,0,0" VerticalAlignment="Top" Width="65"/>
-                    <Label Content="Szereplők:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="11,112,0,0" VerticalAlignment="Top" Width="64"/>
 
-                    <Label Content="Díjak:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="29,297,0,0" VerticalAlignment="Top" Width="64"/>
-                    <Label Content="Rendező:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="288,3,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="Rendezo" Background="#00246B" Foreground="White"  Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label Content="Forgatókönyv író:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="248,33,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="forgatoKonyv" Background="#00246B" Foreground="White"  Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label Content="Zene:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="308,66,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="Zene" Background="#00246B" Foreground="White"  Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,70,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label Content="Korhatár:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="294,130,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="Korhatar" Background="#00246B" Foreground="White"  Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="352,134,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label Content="Gyártó:" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="299,99,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="Gyarto" Background="#00246B" Foreground="White"  Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,103,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Button x:Name="Bekuldes" Background="#00246B" Foreground="White"  Content="Beküldés" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="351,231,0,0" VerticalAlignment="Top" Height="85" Width="247" Click="Bekuldes_Click"/>
-                    <TextBox x:Name="Szereplok" Background="#00246B" Foreground="White" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="75,303,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="204" Height="93"/>
-                    <TextBox x:Name="Dijak" Background="#00246B" Foreground="White" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="75,117,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="204" Height="146"/>
-                </Grid>
+            <TabItem Header="Film hozzáadása">
+
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+
+                    <Border Style="{StaticResource CardStyle}" Margin="20">
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <StackPanel Grid.Column="0" Margin="0 0 25 0">
+
+                                <Label Content="Cím"/>
+                                <TextBox x:Name="Cim" Margin="0 0 0 10"/>
+
+                                <Label Content="Műfaj"/>
+                                <TextBox x:Name="Mufaj" Margin="0 0 0 10"/>
+
+                                <Label Content="Hossz (perc)"/>
+                                <TextBox x:Name="Hossz" Margin="0 0 0 10"/>
+
+                                <Label Content="Megjelenés dátuma"/>
+                                <DatePicker x:Name="Datum"
+                                            Width="220"
+                                            Height="34"
+                                            Margin="0 0 0 10"/>
+
+                                <Label Content="Szereplők"/>
+                                <TextBox x:Name="Szereplok"
+                                         AcceptsReturn="True"
+                                         Height="100"
+                                         VerticalScrollBarVisibility="Auto"
+                                         Margin="0 0 0 10"/>
+
+                                <Label Content="Díjak"/>
+                                <TextBox x:Name="Dijak"
+                                         AcceptsReturn="True"
+                                         Height="100"
+                                         VerticalScrollBarVisibility="Auto"
+                                         Margin="0 0 0 10"/>
+
+                            </StackPanel>
+
+                            <StackPanel Grid.Column="1">
+
+                                <Label Content="Rendező"/>
+                                <TextBox x:Name="Rendezo" Margin="0 0 0 10"/>
+
+                                <Label Content="Forgatókönyv író"/>
+                                <TextBox x:Name="forgatoKonyv" Margin="0 0 0 10"/>
+
+                                <Label Content="Zeneszerző"/>
+                                <TextBox x:Name="Zene" Margin="0 0 0 10"/>
+
+                                <Label Content="Gyártó"/>
+                                <TextBox x:Name="Gyarto" Margin="0 0 0 10"/>
+
+                                <Label Content="Korhatár"/>
+                                <TextBox x:Name="Korhatar" Margin="0 0 0 10"/>
+
+                                <Button Content="Film hozzáadása"
+                                        Style="{StaticResource PrimaryButton}"
+                                        Margin="0 20 0 0"
+                                        Click="Bekuldes_Click"/>
+
+                            </StackPanel>
+
+                        </Grid>
+
+                    </Border>
+                </ScrollViewer>
+
             </TabItem>
-            <TabItem Header="Módosítás/szűrés">
-                <Grid Background="#FFE5E5E5">
+
+            <TabItem Header="Módosítás / Szűrés">
+
+                <Grid Background="#EEF1FF">
+
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0*"/>
-                        <ColumnDefinition Width="0*"/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <StackPanel Grid.ColumnSpan="3" Margin="378,0,0,0">
-                        <DataGrid Height="407" d:ItemsSource="{d:SampleData ItemCount=5}" SelectedIndex="2"/>
-                    </StackPanel>
-                    <TextBlock Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Módosítandó/törlendő adat:" VerticalAlignment="Top" Width="183"/>
-                    <Label Content="Sor:" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="69,31,0,0" VerticalAlignment="Top"/>
-                    <TextBox Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="104,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Label Content="Oszlop:" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="50,54,0,0" VerticalAlignment="Top"/>
-                    <TextBox Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="104,58,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <Button Content="Módosítás" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="24,142,0,0" VerticalAlignment="Top" Height="33" Width="121"/>
-                    <Button Content="Törlés" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="224,142,0,0" VerticalAlignment="Top" Height="33" Width="121"/>
-                    <Label Content="Módosítot:" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="24,96,0,0" VerticalAlignment="Top"/>
-                    <TextBox Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="97,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+
+                    <Border Style="{StaticResource CardStyle}" Grid.Column="0">
+
+                        <DataGrid x:Name="FilmGrid"
+                                  AutoGenerateColumns="True"
+                                  AlternatingRowBackground="#F3F5F9"
+                                  Margin="0">
+
+                            <DataGrid.ColumnHeaderStyle>
+                                <Style TargetType="DataGridColumnHeader">
+                                    <Setter Property="Background" Value="#4A6CF7"/>
+                                    <Setter Property="Foreground" Value="White"/>
+                                    <Setter Property="FontWeight" Value="Bold"/>
+                                    <Setter Property="Padding" Value="8"/>
+                                </Style>
+                            </DataGrid.ColumnHeaderStyle>
+
+                        </DataGrid>
+
+                    </Border>
+
+                    <Border Style="{StaticResource CardStyle}" Grid.Column="1">
+
+                        <StackPanel>
+
+                            <TextBlock Text="Módosítás / törlés"
+                                       FontSize="16"
+                                       FontWeight="Bold"
+                                       Margin="0 0 0 20"/>
+
+                            <Label Content="Sor index:"/>
+                            <TextBox x:Name="ModSor" Margin="0 0 0 10"/>
+
+                            <Label Content="Oszlop index:"/>
+                            <TextBox x:Name="ModOszlop" Margin="0 0 0 10"/>
+
+                            <Label Content="Új érték:"/>
+                            <TextBox x:Name="ModErtek" Margin="0 0 0 20"/>
+
+                            <Button Content="Módosítás"
+                                    Style="{StaticResource PrimaryButton}"
+                                    Margin="0 0 0 10"/>
+
+                            <Button Content="Törlés"
+                                    Style="{StaticResource PrimaryButton}"
+                                    Background="#FF5A5A"/>
+
+                        </StackPanel>
+
+                    </Border>
+
                 </Grid>
+
             </TabItem>
+
         </TabControl>
-
     </Grid>
 </Window>
