--- a/Filmek/Filmek/MainWindow.xaml
+++ b/Filmek/Filmek/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Filmek adatbázis"
-        Height="550"
+        Height="650"
         Width="900"
         Background="#F1F4FF">
 
@@ -152,19 +152,11 @@
                                        FontSize="16"
                                        FontWeight="Bold"
                                        Margin="0 0 0 20"/>
-
-                            <Label Content="Sor index:"/>
-                            <TextBox x:Name="ModSor" Margin="0 0 0 10"/>
-
-                            <Label Content="Oszlop index:"/>
                             <TextBox x:Name="ModOszlop" Margin="0 0 0 10"/>
-
-                            <Label Content="Új érték:"/>
-                            <TextBox x:Name="ModErtek" Margin="0 0 0 20"/>
 
                             <Button Content="Módosítás"
                                     Style="{StaticResource PrimaryButton}"
-                                    Margin="0 0 0 10"/>
+                                    Margin="0 0 0 10" Click="Button_Click"/>
 
                             <Button Content="Törlés"
                                     Style="{StaticResource PrimaryButton}"
